@@ -32,8 +32,10 @@ import glide.api.models.exceptions.RequestException;
 import glide.ffi.resolvers.OpenTelemetryResolver;
 import glide.internal.GlideCoreClient;
 import glide.utils.BufferUtils;
+import glide.utils.Java8Utils;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -50,25 +52,21 @@ import response.ResponseOuterClass.Response;
 @RequiredArgsConstructor
 public class CommandManager {
 
-    /**
-     * Set of blocking command names (uppercase) that have their own timeout in the command arguments.
-     * These commands should NOT use Java-side timeout - Rust handles their timeout based on the
-     * command's timeout argument.
-     */
     private static final Set<String> BLOCKING_COMMAND_NAMES =
-            Set.of(
-                    "BLPOP",
-                    "BRPOP",
-                    "BLMOVE",
-                    "BZPOPMAX",
-                    "BZPOPMIN",
-                    "BRPOPLPUSH",
-                    "BLMPOP",
-                    "BZMPOP",
-                    "XREAD",
-                    "XREADGROUP",
-                    "WAIT",
-                    "WAITAOF");
+            Collections.unmodifiableSet(
+                    Java8Utils.createSet(
+                            "BLPOP",
+                            "BRPOP",
+                            "BLMOVE",
+                            "BZPOPMAX",
+                            "BZPOPMIN",
+                            "BRPOPLPUSH",
+                            "BLMPOP",
+                            "BZMPOP",
+                            "XREAD",
+                            "XREADGROUP",
+                            "WAIT",
+                            "WAITAOF"));
 
     /** Core client connection. */
     private final GlideCoreClient coreClient;
@@ -309,7 +307,7 @@ public class CommandManager {
             List<GlideString> args,
             GlideExceptionCheckedFunction<Response, T> responseHandler) {
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit script."));
             return errorFuture;
@@ -337,7 +335,7 @@ public class CommandManager {
                     .thenApply(responseHandler::apply)
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -350,7 +348,7 @@ public class CommandManager {
             Route route,
             GlideExceptionCheckedFunction<Response, T> responseHandler) {
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit script."));
             return errorFuture;
@@ -380,7 +378,7 @@ public class CommandManager {
                     .thenApply(responseHandler::apply)
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -470,7 +468,7 @@ public class CommandManager {
             boolean expectUtf8Response) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit cluster scan."));
             return errorFuture;
@@ -530,7 +528,7 @@ public class CommandManager {
                             })
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -635,7 +633,7 @@ public class CommandManager {
             boolean expectUtf8Response) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit command."));
             return errorFuture;
@@ -673,7 +671,7 @@ public class CommandManager {
                             })
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -690,7 +688,7 @@ public class CommandManager {
             boolean expectUtf8Response) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit command."));
             return errorFuture;
@@ -726,7 +724,7 @@ public class CommandManager {
                             })
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -811,7 +809,7 @@ public class CommandManager {
             Integer timeoutOverrideMs) {
 
         if (!coreClient.isConnected()) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(
                     new ClosingException("Client closed: Unable to submit batch."));
             return errorFuture;
@@ -828,7 +826,7 @@ public class CommandManager {
                     .thenApply(responseHandler::apply)
                     .exceptionally(this::exceptionHandler);
         } catch (Exception e) {
-            var errorFuture = new CompletableFuture<T>();
+            CompletableFuture<T> errorFuture = new CompletableFuture<T>();
             errorFuture.completeExceptionally(e);
             return errorFuture;
         }
@@ -1051,7 +1049,7 @@ public class CommandManager {
             spanPtr = OpenTelemetryResolver.createLeakedOtelSpan(requestType.name());
         }
 
-        var builder =
+        CommandRequest.Builder builder =
                 CommandRequest.newBuilder()
                         .setSingleCommand(commandBuilder.setRequestType(requestType).build());
 
@@ -1073,7 +1071,7 @@ public class CommandManager {
             spanPtr = OpenTelemetryResolver.createLeakedOtelSpan(requestType.name());
         }
 
-        var builder =
+        CommandRequest.Builder builder =
                 CommandRequest.newBuilder()
                         .setSingleCommand(commandBuilder.setRequestType(requestType).build());
 
@@ -1100,7 +1098,8 @@ public class CommandManager {
 
         if (options.isPresent()) {
             BatchOptions opts = options.get();
-            var batchBuilder = prepareCommandRequestBatchOptions(batch.getProtobufBatch(), opts);
+            CommandRequestOuterClass.Batch.Builder batchBuilder =
+                    prepareCommandRequestBatchOptions(batch.getProtobufBatch(), opts);
             builder.setBatch(batchBuilder.setRaiseOnError(raiseOnError).build());
         } else {
             builder.setBatch(batch.getProtobufBatch().setRaiseOnError(raiseOnError).build());
