@@ -284,6 +284,9 @@ import static glide.utils.ArrayTransformUtils.convertMapToValueKeyStringArray;
 import static glide.utils.ArrayTransformUtils.convertMapToValueKeyStringArrayBinary;
 import static glide.utils.ArrayTransformUtils.convertNestedArrayToKeyValueGlideStringArray;
 import static glide.utils.ArrayTransformUtils.convertNestedArrayToKeyValueStringArray;
+import static glide.utils.Java8Utils.createList;
+import static glide.utils.Java8Utils.createMap;
+import static glide.utils.Java8Utils.createSet;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -299,6 +302,7 @@ import glide.api.models.commands.ExpireOptions;
 import glide.api.models.commands.FlushMode;
 import glide.api.models.commands.GetExOptions;
 import glide.api.models.commands.InfoOptions.Section;
+import glide.api.models.commands.LInsertOptions.InsertPosition;
 import glide.api.models.commands.LPosOptions;
 import glide.api.models.commands.ListDirection;
 import glide.api.models.commands.RangeOptions;
@@ -371,6 +375,8 @@ import glide.api.models.commands.stream.StreamTrimOptions.MinId;
 import glide.managers.CommandManager;
 import glide.utils.ArgsBuilder;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -837,7 +843,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new String[] {"EX", "10"}),
@@ -860,7 +866,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptionsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new GlideString[] {gs("EX"), gs("10")}),
@@ -1730,7 +1736,7 @@ public class GlideClientTest {
         testResponse.complete(payload);
 
         // match on protobuf request
-        when(commandManager.submitScript(eq(script), eq(List.of()), eq(List.of()), any()))
+        when(commandManager.submitScript(eq(script), eq(createList()), eq(createList()), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -1759,8 +1765,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(createList(gs("key1"), gs("key2"))),
+                        eq(createList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -1795,8 +1801,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(List.of(gs("key1"), gs("key2"))),
-                        eq(List.of(gs("arg1"), gs("arg2"))),
+                        eq(createList(gs("key1"), gs("key2"))),
+                        eq(createList(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -4032,7 +4038,7 @@ public class GlideClientTest {
     public void smembers_returns_success() {
         // setup
         String key = "testKey";
-        Set<String> value = Set.of("testMember");
+        Set<String> value = createSet("testMember");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4101,7 +4107,7 @@ public class GlideClientTest {
     public void sdiff_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4124,7 +4130,7 @@ public class GlideClientTest {
     public void sdiff_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4299,7 +4305,7 @@ public class GlideClientTest {
     public void sinter_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4322,7 +4328,7 @@ public class GlideClientTest {
     public void sinter_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4732,7 +4738,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4757,7 +4763,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4783,7 +4789,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4809,7 +4815,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4835,7 +4841,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4862,7 +4868,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4890,7 +4896,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Map.of("key1", "elem");
+        Map<String, Object> value = createMap("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4921,7 +4927,7 @@ public class GlideClientTest {
         GlideString[] arguments = {
             gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")
         };
-        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
+        Map<GlideString, Object> value = createMap(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5023,7 +5029,7 @@ public class GlideClientTest {
     @Test
     public void configGet_returns_success() {
         // setup
-        Map<String, String> testPayload = Map.of("timeout", "1000");
+        Map<String, String> testPayload = createMap("timeout", "1000");
         CompletableFuture<Map<String, String>> testResponse = new CompletableFuture<>();
         testResponse.complete(testPayload);
 
@@ -5054,7 +5060,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<String> response = service.configSet(Map.of("timeout", "1000"));
+        CompletableFuture<String> response = service.configSet(createMap("timeout", "1000"));
 
         // verify
         assertEquals(testResponse, response);
@@ -5165,7 +5171,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Map.of("member1", 2.5);
+        Map<String, Double> value = createMap("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5189,7 +5195,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5215,7 +5221,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = Map.of("member1", 2.0, "member2", 3.0);
+        Map<String, Double> value = createMap("member1", 2.0, "member2", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5240,7 +5246,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.0, gs("member2"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.0, gs("member2"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5315,7 +5321,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Map.of("member1", 2.5);
+        Map<String, Double> value = createMap("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5339,7 +5345,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
+        Map<GlideString, Double> value = createMap(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5415,7 +5421,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = Map.of("member1", 3.0, "member2", 1.0);
+        Map<String, Double> value = createMap("member1", 3.0, "member2", 1.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5440,7 +5446,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = Map.of(gs("member1"), 3.0, gs("member2"), 1.0);
+        Map<GlideString, Double> value = createMap(gs("member1"), 3.0, gs("member2"), 1.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5677,7 +5683,7 @@ public class GlideClientTest {
         RangeByIndex rangeByIndex = new RangeByIndex(0, 4);
         String[] arguments =
                 new String[] {key, rangeByIndex.getStart(), rangeByIndex.getEnd(), WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Map.of("one", 1.0, "two", 2.0, "three", 3.0);
+        Map<String, Double> value = createMap("one", 1.0, "two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5705,7 +5711,7 @@ public class GlideClientTest {
                 new GlideString[] {
                     key, gs(rangeByIndex.getStart()), gs(rangeByIndex.getEnd()), gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = Map.of(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5746,7 +5752,7 @@ public class GlideClientTest {
                     "2",
                     WITH_SCORES_VALKEY_API
                 };
-        Map<String, Double> value = Map.of("two", 2.0, "three", 3.0);
+        Map<String, Double> value = createMap("two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5786,7 +5792,7 @@ public class GlideClientTest {
                     gs("2"),
                     gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = Map.of(gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = createMap(gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6116,7 +6122,7 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {"2", key1, key2, WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Map.of("element1", 2.0);
+        Map<String, Double> value = createMap("element1", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6142,7 +6148,7 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {gs("2"), key1, key2, gs(WITH_SCORES_VALKEY_API)};
-        Map<GlideString, Double> value = Map.of(gs("element1"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("element1"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6775,7 +6781,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6801,7 +6807,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6832,7 +6838,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6866,7 +6872,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6944,7 +6950,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6970,7 +6976,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7001,7 +7007,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7035,7 +7041,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7638,7 +7644,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamAddOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // no TRIM option
                         "test_xadd_no_trim",
@@ -7849,7 +7855,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptions() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen", new MaxLen(5L), new String[] {TRIM_MAXLEN_VALKEY_API, "5"}),
@@ -7883,7 +7889,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptionsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen",
@@ -7977,8 +7983,8 @@ public class GlideClientTest {
         String streamIdTwo = "id-two";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         String[] arguments = {READ_STREAMS_VALKEY_API, keyOne, keyTwo, streamIdOne, streamIdTwo};
 
         CompletableFuture<Map<String, Map<String, String[][]>>> testResponse =
@@ -8012,8 +8018,8 @@ public class GlideClientTest {
         GlideString streamIdTwo = gs("id-two");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_STREAMS_VALKEY_API), keyOne, keyTwo, streamIdOne, streamIdTwo
         };
@@ -8050,7 +8056,7 @@ public class GlideClientTest {
         Long count = 10L;
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         String[] arguments = {
             READ_COUNT_VALKEY_API,
             count.toString(),
@@ -8073,7 +8079,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xread(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<String, Map<String, String[][]>> payload = response.get();
 
@@ -8092,7 +8098,7 @@ public class GlideClientTest {
         Long count = 10L;
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_COUNT_VALKEY_API),
             gs(count.toString()),
@@ -8115,7 +8121,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadBinary(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<GlideString, Map<GlideString, GlideString[][]>> payload = response.get();
 
@@ -8182,7 +8188,7 @@ public class GlideClientTest {
         StreamRange start = IdBound.of(9999L);
         StreamRange end = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8211,7 +8217,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8239,7 +8246,7 @@ public class GlideClientTest {
         StreamRange end = InfRangeBound.MAX;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8278,7 +8285,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8315,7 +8323,7 @@ public class GlideClientTest {
         StreamRange end = IdBound.of(9999L);
         StreamRange start = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8344,7 +8352,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8373,7 +8382,7 @@ public class GlideClientTest {
         StreamRange start = InfRangeBound.MIN;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8412,7 +8421,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8837,8 +8847,8 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8884,8 +8894,8 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -8931,7 +8941,7 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8958,7 +8968,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xreadgroup(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -8981,7 +8991,7 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
+                createMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -9008,7 +9018,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadgroup(
-                        Map.of(keyOne, streamIdOne),
+                        Collections.singletonMap(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -9055,7 +9065,7 @@ public class GlideClientTest {
         Long minIdleTime = 18L;
         String[] ids = new String[] {"testId"};
         String[] arguments = concatenateArrays(new String[] {key, groupName, consumer, "18"}, ids);
-        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = createMap("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9086,7 +9096,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 concatenateArrays(new GlideString[] {key, groupName, consumer, gs("18")}, ids);
         Map<GlideString, GlideString[][]> mockResult =
-                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                createMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9132,7 +9142,7 @@ public class GlideClientTest {
                     "5",
                     FORCE_VALKEY_API
                 };
-        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = createMap("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9178,7 +9188,7 @@ public class GlideClientTest {
                     gs(FORCE_VALKEY_API)
                 };
         Map<GlideString, GlideString[][]> mockResult =
-                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                createMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9363,7 +9373,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9400,7 +9410,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9437,7 +9448,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9477,7 +9488,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9516,7 +9528,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9554,7 +9566,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9592,7 +9605,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9641,7 +9654,8 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult =
+                Collections.singletonMap(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -10303,7 +10317,7 @@ public class GlideClientTest {
     public void linsert_returns_success() {
         // setup
         String key = "testKey";
-        var position = BEFORE;
+        InsertPosition position = BEFORE;
         String pivot = "pivot";
         String elem = "elem";
         String[] arguments = new String[] {key, position.toString(), pivot, elem};
@@ -10330,7 +10344,7 @@ public class GlideClientTest {
     public void linsert_binary_returns_success() {
         // setup
         GlideString key = gs("testKey");
-        var position = BEFORE;
+        InsertPosition position = BEFORE;
         GlideString pivot = gs("pivot");
         GlideString elem = gs("elem");
         GlideString[] arguments = new GlideString[] {key, gs(position.toString()), pivot, elem};
@@ -11781,7 +11795,7 @@ public class GlideClientTest {
         // setup
         String[] args = new String[0];
         Map<String, Map<String, Map<String, Object>>> value =
-                Map.of("::1", Map.of("1", Map.of("2", 2)));
+                createMap("::1", createMap("1", createMap("2", 2)));
         CompletableFuture<Map<String, Map<String, Map<String, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -11807,7 +11821,7 @@ public class GlideClientTest {
         // setup
         GlideString[] args = new GlideString[0];
         Map<String, Map<GlideString, Map<GlideString, Object>>> value =
-                Map.of("::1", Map.of(gs("1"), Map.of(gs("2"), 2)));
+                createMap("::1", createMap(gs("1"), createMap(gs("2"), 2)));
         CompletableFuture<Map<String, Map<GlideString, Map<GlideString, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -12131,7 +12145,7 @@ public class GlideClientTest {
         double timeout = 0.1;
         String[] arguments =
                 new String[] {Double.toString(timeout), "2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12164,7 +12178,8 @@ public class GlideClientTest {
                 new GlideString[] {
                     gs(Double.toString(timeout)), gs("2"), key, key2, gs(listDirection.toString())
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12204,7 +12219,7 @@ public class GlideClientTest {
                     COUNT_FOR_LIST_VALKEY_API,
                     Long.toString(count)
                 };
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12244,7 +12259,8 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12511,7 +12527,7 @@ public class GlideClientTest {
         String[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         String[] arguments = new String[] {"2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12538,7 +12554,8 @@ public class GlideClientTest {
         GlideString[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         GlideString[] arguments = new GlideString[] {gs("2"), key, key2, gs(listDirection.toString())};
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12571,7 +12588,7 @@ public class GlideClientTest {
                 new String[] {
                     "2", key, key2, listDirection.toString(), COUNT_FOR_LIST_VALKEY_API, Long.toString(count)
                 };
-        Map<String, String[]> value = Map.of(key, new String[] {"five"});
+        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12607,7 +12624,8 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value =
+                Collections.singletonMap(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13039,7 +13057,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Set<String> value = Set.of("one", "two");
+        Set<String> value = createSet("one", "two");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13064,7 +13082,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Set<GlideString> value = Set.of(gs("one"), gs("two"));
+        Set<GlideString> value = createSet(gs("one"), gs("two"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13518,7 +13536,8 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING};
-        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13543,7 +13562,8 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING)};
-        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13565,7 +13585,8 @@ public class GlideClientTest {
     @Test
     public void lcsIdx_throws_NullPointerException() {
         // setup
-        Map<String, Object> value = Map.of("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value =
+                createMap("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         // exception
         RuntimeException runtimeException =
@@ -13585,7 +13606,7 @@ public class GlideClientTest {
         String[] arguments =
                 new String[] {key1, key2, IDX_COMMAND_STRING, MINMATCHLEN_COMMAND_STRING, "2"};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13618,7 +13639,7 @@ public class GlideClientTest {
                     key1, key2, gs(IDX_COMMAND_STRING), gs(MINMATCHLEN_COMMAND_STRING), gs("2")
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13648,7 +13669,7 @@ public class GlideClientTest {
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING, WITHMATCHLEN_COMMAND_STRING};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13679,7 +13700,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING), gs(WITHMATCHLEN_COMMAND_STRING)};
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13717,7 +13738,7 @@ public class GlideClientTest {
                     WITHMATCHLEN_COMMAND_STRING
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13755,7 +13776,7 @@ public class GlideClientTest {
                     gs(WITHMATCHLEN_COMMAND_STRING)
                 };
         Map<String, Object> value =
-                Map.of(
+                createMap(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13989,7 +14010,7 @@ public class GlideClientTest {
     public void pubsubNumSub_returns_success() {
         // setup
         String[] arguments = new String[] {"ch1", "ch2"};
-        Map<String, Long> value = Map.of();
+        Map<String, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<String, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14012,7 +14033,7 @@ public class GlideClientTest {
     public void pubsubNumSubBinary_returns_success() {
         // setup
         GlideString[] arguments = new GlideString[] {gs("ch1"), gs("ch2")};
-        Map<GlideString, Long> value = Map.of();
+        Map<GlideString, Long> value = Collections.emptyMap();
 
         CompletableFuture<Map<GlideString, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14036,7 +14057,7 @@ public class GlideClientTest {
     public void sunion_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = Set.of("1", "2");
+        Set<String> value = createSet("1", "2");
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14058,7 +14079,7 @@ public class GlideClientTest {
     public void sunion_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = Set.of(gs("1"), gs("2"));
+        Set<GlideString> value = createSet(gs("1"), gs("2"));
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14926,7 +14947,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -14992,7 +15013,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15123,7 +15144,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15188,7 +15209,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15315,7 +15336,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15390,7 +15411,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15526,7 +15547,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArguments() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15568,7 +15589,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArgumentsBinary() {
-        return List.of(
+        return Arrays.asList(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15682,7 +15703,7 @@ public class GlideClientTest {
         String[] arguments = {key};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             "name",
                             "groupName",
                             "consumers",
@@ -15722,7 +15743,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             gs("name"),
                             gs("groupName"),
                             gs("consumers"),
@@ -15763,7 +15784,7 @@ public class GlideClientTest {
         String[] arguments = {key, groupName};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    Map.of("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
+                    createMap("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
                 };
 
         CompletableFuture<Map<String, Object>[]> testResponse = new CompletableFuture<>();
@@ -15792,7 +15813,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key, groupName};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    Map.of(
+                    createMap(
                             gs("name"),
                             gs("groupName"),
                             gs("pending"),
@@ -15826,7 +15847,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15851,7 +15872,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key, FULL};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15877,7 +15898,7 @@ public class GlideClientTest {
         String key = "testKey";
         int count = 42;
         String[] arguments = {key, FULL, COUNT, "42"};
-        Map<String, Object> summary = Map.of("some", "data");
+        Map<String, Object> summary = createMap("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15902,7 +15923,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15927,7 +15948,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key, gs(FULL)};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15953,7 +15974,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         int count = 42;
         GlideString[] arguments = {key, gs(FULL), gs(COUNT), gs("42")};
-        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = createMap(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -16093,7 +16114,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.subscribe(Set.of("channel1", "channel2"), 5000);
+        CompletableFuture<Void> response = service.subscribe(createSet("channel1", "channel2"), 5000);
 
         // verify
         assertNull(response.get());
@@ -16111,7 +16132,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.unsubscribe(Set.of("channel1"), 1000);
+        CompletableFuture<Void> response = service.unsubscribe(createSet("channel1"), 1000);
 
         // verify
         assertNull(response.get());
@@ -16129,7 +16150,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.psubscribe(Set.of("pattern*"), 3000);
+        CompletableFuture<Void> response = service.psubscribe(createSet("pattern*"), 3000);
 
         // verify
         assertNull(response.get());
@@ -16148,7 +16169,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<Void> response = service.punsubscribe(Set.of("pattern*"), 2000);
+        CompletableFuture<Void> response = service.punsubscribe(createSet("pattern*"), 2000);
 
         // verify
         assertNull(response.get());
