@@ -34,6 +34,8 @@ import static glide.api.models.commands.scan.ScanOptions.ObjectType.SET;
 import static glide.api.models.commands.scan.ScanOptions.ObjectType.STRING;
 import static glide.cluster.CommandTests.DEFAULT_INFO_SECTIONS;
 import static glide.cluster.CommandTests.EVERYTHING_INFO_SECTIONS;
+import static glide.utils.Java8Utils.createMap;
+import static glide.utils.Java8Utils.repeat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -59,6 +61,7 @@ import glide.api.models.exceptions.RequestException;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -126,9 +129,9 @@ public class CommandTests {
     public void custom_command_del_returns_a_number(GlideClient regularClient) {
         String key = "custom_command_del_returns_a_number";
         regularClient.set(key, INITIAL_VALUE).get();
-        var del = regularClient.customCommand(new String[] {"DEL", key}).get();
+        Object del = regularClient.customCommand(new String[] {"DEL", key}).get();
         assertEquals(1L, del);
-        var data = regularClient.get(key).get();
+        String data = regularClient.get(key).get();
         assertNull(data);
     }
 
@@ -284,7 +287,7 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void clientId(GlideClient regularClient) {
-        var id = regularClient.clientId().get();
+        Long id = regularClient.clientId().get();
         assertTrue(id > 0);
     }
 
@@ -295,7 +298,7 @@ public class CommandTests {
         // TODO replace with the corresponding command once implemented
         regularClient.customCommand(new String[] {"client", "setname", "clientGetName"}).get();
 
-        var name = regularClient.clientGetName().get();
+        String name = regularClient.clientGetName().get();
 
         assertEquals("clientGetName", name);
     }
@@ -307,7 +310,7 @@ public class CommandTests {
         String data = regularClient.info(new Section[] {STATS}).get();
         long value_before = getValueFromInfo(data, "total_net_input_bytes");
 
-        var result = regularClient.configResetStat().get();
+        String result = regularClient.configResetStat().get();
         assertEquals(OK, result);
 
         data = regularClient.info(new Section[] {STATS}).get();
@@ -319,8 +322,8 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void config_rewrite_non_existent_config_file(GlideClient regularClient) {
-        var info = regularClient.info(new Section[] {SERVER}).get();
-        var configFile = parseInfoResponseToMap(info).get("config_file");
+        String info = regularClient.info(new Section[] {SERVER}).get();
+        String configFile = parseInfoResponseToMap(info).get("config_file");
 
         if (configFile.isEmpty()) {
             ExecutionException executionException =
@@ -335,7 +338,7 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void configGet_with_no_args_returns_error(GlideClient regularClient) {
-        var exception =
+        ExecutionException exception =
                 assertThrows(
                         ExecutionException.class, () -> regularClient.configGet(new String[] {}).get());
         assertInstanceOf(RequestException.class, exception.getCause());
@@ -346,7 +349,7 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void configGet_with_wildcard(GlideClient regularClient) {
-        var data = regularClient.configGet(new String[] {"*file"}).get();
+        Map<String, String> data = regularClient.configGet(new String[] {"*file"}).get();
         assertTrue(data.size() > 5);
         assertTrue(data.containsKey("pidfile"));
         assertTrue(data.containsKey("logfile"));
@@ -357,7 +360,7 @@ public class CommandTests {
     @SneakyThrows
     public void configGet_with_multiple_params(GlideClient regularClient) {
         assumeTrue(SERVER_VERSION.isGreaterThanOrEqualTo("7.0.0"), "This feature added in version 7");
-        var data = regularClient.configGet(new String[] {"pidfile", "logfile"}).get();
+        Map<String, String> data = regularClient.configGet(new String[] {"pidfile", "logfile"}).get();
         assertAll(
                 () -> assertEquals(2, data.size()),
                 () -> assertTrue(data.containsKey("pidfile")),
@@ -368,10 +371,13 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void configSet_with_unknown_parameter_returns_error(GlideClient regularClient) {
-        var exception =
+        ExecutionException exception =
                 assertThrows(
                         ExecutionException.class,
-                        () -> regularClient.configSet(Map.of("Unknown Option", "Unknown Value")).get());
+                        () ->
+                                regularClient
+                                        .configSet(Collections.singletonMap("Unknown Option", "Unknown Value"))
+                                        .get());
         assertInstanceOf(RequestException.class, exception.getCause());
     }
 
@@ -379,14 +385,14 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void configSet_a_parameter(GlideClient regularClient) {
-        var oldValue = regularClient.configGet(new String[] {"maxclients"}).get().get("maxclients");
+        String oldValue = regularClient.configGet(new String[] {"maxclients"}).get().get("maxclients");
 
-        var response = regularClient.configSet(Map.of("maxclients", "42")).get();
+        String response = regularClient.configSet(Collections.singletonMap("maxclients", "42")).get();
         assertEquals(OK, response);
-        var newValue = regularClient.configGet(new String[] {"maxclients"}).get();
+        Map<String, String> newValue = regularClient.configGet(new String[] {"maxclients"}).get();
         assertEquals("42", newValue.get("maxclients"));
 
-        response = regularClient.configSet(Map.of("maxclients", oldValue)).get();
+        response = regularClient.configSet(Collections.singletonMap("maxclients", oldValue)).get();
         assertEquals(OK, response);
     }
 
@@ -432,7 +438,7 @@ public class CommandTests {
     @SneakyThrows
     public void lastsave(GlideClient regularClient) {
         long result = regularClient.lastsave().get();
-        var yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
+        Instant yesterday = Instant.now().minus(1, ChronoUnit.DAYS);
         assertTrue(Instant.ofEpochSecond(result).isAfter(yesterday));
     }
 
@@ -440,7 +446,7 @@ public class CommandTests {
     @MethodSource("getClients")
     @SneakyThrows
     public void lolwut_lolwut(GlideClient regularClient) {
-        var response = regularClient.lolwut().get();
+        String response = regularClient.lolwut().get();
         System.out.printf("%nLOLWUT standalone client standard response%n%s%n", response);
         assertTrue(
                 response.contains("ver") && response.contains(SERVER_VERSION.toString()),
@@ -512,7 +518,7 @@ public class CommandTests {
         if (SERVER_VERSION.isGreaterThanOrEqualTo("6.2.0")) {
             assertEquals(OK, regularClient.flushdb(SYNC).get());
         } else {
-            var executionException =
+            ExecutionException executionException =
                     assertThrows(ExecutionException.class, () -> regularClient.flushdb(SYNC).get());
             assertInstanceOf(RequestException.class, executionException.getCause());
             assertEquals(OK, regularClient.flushdb(ASYNC).get());
@@ -535,11 +541,13 @@ public class CommandTests {
         String oldPolicy =
                 regularClient.configGet(new String[] {maxmemoryPolicy}).get().get(maxmemoryPolicy);
         try {
-            assertEquals(OK, regularClient.configSet(Map.of(maxmemoryPolicy, "allkeys-lfu")).get());
+            assertEquals(
+                    OK,
+                    regularClient.configSet(Collections.singletonMap(maxmemoryPolicy, "allkeys-lfu")).get());
             assertEquals(OK, regularClient.set(key, "").get());
             assertTrue(regularClient.objectFreq(key).get() >= 0L);
         } finally {
-            regularClient.configSet(Map.of(maxmemoryPolicy, oldPolicy)).get();
+            regularClient.configSet(Collections.singletonMap(maxmemoryPolicy, oldPolicy)).get();
         }
     }
 
@@ -550,7 +558,7 @@ public class CommandTests {
         if (SERVER_VERSION.isGreaterThanOrEqualTo("6.2.0")) {
             assertEquals(OK, regularClient.flushall(SYNC).get());
         } else {
-            var executionException =
+            ExecutionException executionException =
                     assertThrows(ExecutionException.class, () -> regularClient.flushall(SYNC).get());
             assertInstanceOf(RequestException.class, executionException.getCause());
             assertEquals(OK, regularClient.flushall(ASYNC).get());
@@ -575,27 +583,28 @@ public class CommandTests {
         String libName = "mylib1c";
         String funcName = "myfunc1c";
         // function $funcName returns first argument
-        String code = generateLuaLibCode(libName, Map.of(funcName, "return args[1]"), true);
+        String code =
+                generateLuaLibCode(libName, Collections.singletonMap(funcName, "return args[1]"), true);
         assertEquals(libName, regularClient.functionLoad(code, false).get());
 
-        var functionResult =
+        Object functionResult =
                 regularClient.fcall(funcName, new String[0], new String[] {"one", "two"}).get();
         assertEquals("one", functionResult);
         functionResult =
                 regularClient.fcallReadOnly(funcName, new String[0], new String[] {"one", "two"}).get();
         assertEquals("one", functionResult);
 
-        var flist = regularClient.functionList(false).get();
-        var expectedDescription =
+        Map<String, Object>[] flist = regularClient.functionList(false).get();
+        Map<String, String> expectedDescription =
                 new HashMap<String, String>() {
                     {
                         put(funcName, null);
                     }
                 };
-        var expectedFlags =
+        Map<String, Set<String>> expectedFlags =
                 new HashMap<String, Set<String>>() {
                     {
-                        put(funcName, Set.of("no-writes"));
+                        put(funcName, Collections.singleton("no-writes"));
                     }
                 };
         checkFunctionListResponse(flist, libName, expectedDescription, expectedFlags, Optional.empty());
@@ -605,7 +614,7 @@ public class CommandTests {
                 flist, libName, expectedDescription, expectedFlags, Optional.of(code));
 
         // re-load library without overwriting
-        var executionException =
+        ExecutionException executionException =
                 assertThrows(ExecutionException.class, () -> regularClient.functionLoad(code, false).get());
         assertInstanceOf(RequestException.class, executionException.getCause());
         assertTrue(
@@ -618,11 +627,12 @@ public class CommandTests {
         // function $newFuncName returns argument array len
         String newCode =
                 generateLuaLibCode(
-                        libName, Map.of(funcName, "return args[1]", newFuncName, "return #args"), true);
+                        libName, createMap(funcName, "return args[1]", newFuncName, "return #args"), true);
         assertEquals(libName, regularClient.functionLoad(newCode, true).get());
 
         // load new lib and delete it - first lib remains loaded
-        String anotherLib = generateLuaLibCode("anotherLib", Map.of("anotherFunc", ""), false);
+        String anotherLib =
+                generateLuaLibCode("anotherLib", Collections.singletonMap("anotherFunc", ""), false);
         assertEquals("anotherLib", regularClient.functionLoad(anotherLib, true).get());
         assertEquals(OK, regularClient.functionDelete("anotherLib").get());
 
@@ -635,7 +645,7 @@ public class CommandTests {
 
         flist = regularClient.functionList(libName, false).get();
         expectedDescription.put(newFuncName, null);
-        expectedFlags.put(newFuncName, Set.of("no-writes"));
+        expectedFlags.put(newFuncName, Collections.singleton("no-writes"));
         checkFunctionListResponse(flist, libName, expectedDescription, expectedFlags, Optional.empty());
 
         flist = regularClient.functionList(libName, true).get();
@@ -664,10 +674,11 @@ public class CommandTests {
         GlideString funcName = gs("myfunc1c");
         // function $funcName returns first argument
         GlideString code =
-                generateLuaLibCodeBinary(libName, Map.of(funcName, gs("return args[1]")), true);
+                generateLuaLibCodeBinary(
+                        libName, Collections.singletonMap(funcName, gs("return args[1]")), true);
         assertEquals(libName, regularClient.functionLoad(code, false).get());
 
-        var functionResult =
+        Object functionResult =
                 regularClient
                         .fcall(funcName, new GlideString[0], new GlideString[] {gs("one"), gs("two")})
                         .get();
@@ -678,17 +689,17 @@ public class CommandTests {
                         .get();
         assertEquals(gs("one"), functionResult);
 
-        var flist = regularClient.functionListBinary(false).get();
-        var expectedDescription =
+        Map<GlideString, Object>[] flist = regularClient.functionListBinary(false).get();
+        Map<GlideString, GlideString> expectedDescription =
                 new HashMap<GlideString, GlideString>() {
                     {
                         put(funcName, null);
                     }
                 };
-        var expectedFlags =
+        Map<GlideString, Set<GlideString>> expectedFlags =
                 new HashMap<GlideString, Set<GlideString>>() {
                     {
-                        put(funcName, Set.of(gs("no-writes")));
+                        put(funcName, Collections.singleton(gs("no-writes")));
                     }
                 };
         checkFunctionListResponseBinary(
@@ -699,7 +710,7 @@ public class CommandTests {
                 flist, libName, expectedDescription, expectedFlags, Optional.of(code));
 
         // re-load library without overwriting
-        var executionException =
+        ExecutionException executionException =
                 assertThrows(ExecutionException.class, () -> regularClient.functionLoad(code, false).get());
         assertInstanceOf(RequestException.class, executionException.getCause());
         assertTrue(
@@ -712,12 +723,15 @@ public class CommandTests {
         // function $newFuncName returns argument array len
         GlideString newCode =
                 generateLuaLibCodeBinary(
-                        libName, Map.of(funcName, gs("return args[1]"), newFuncName, gs("return #args")), true);
+                        libName,
+                        createMap(funcName, gs("return args[1]"), newFuncName, gs("return #args")),
+                        true);
         assertEquals(libName, regularClient.functionLoad(newCode, true).get());
 
         // load new lib and delete it - first lib remains loaded
         GlideString anotherLib =
-                generateLuaLibCodeBinary(gs("anotherLib"), Map.of(gs("anotherFunc"), gs("")), false);
+                generateLuaLibCodeBinary(
+                        gs("anotherLib"), Collections.singletonMap(gs("anotherFunc"), gs("")), false);
         assertEquals(gs("anotherLib"), regularClient.functionLoad(anotherLib, true).get());
         assertEquals(OK, regularClient.functionDelete(gs("anotherLib")).get());
 
@@ -730,7 +744,7 @@ public class CommandTests {
 
         flist = regularClient.functionListBinary(libName, false).get();
         expectedDescription.put(newFuncName, null);
-        expectedFlags.put(newFuncName, Set.of(gs("no-writes")));
+        expectedFlags.put(newFuncName, Collections.singleton(gs("no-writes")));
         checkFunctionListResponseBinary(
                 flist, libName, expectedDescription, expectedFlags, Optional.empty());
 
@@ -817,7 +831,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -825,7 +839,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -869,7 +883,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -877,7 +891,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -923,7 +937,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -931,7 +945,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -990,7 +1004,7 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // nothing to kill
-        var exception =
+        ExecutionException exception =
                 assertThrows(ExecutionException.class, () -> regularClient.functionKill().get());
         assertInstanceOf(RequestException.class, exception.getCause());
         assertTrue(exception.getMessage().toLowerCase().contains("notbusy"));
@@ -998,7 +1012,7 @@ public class CommandTests {
         // load the lib
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // call the function without await
@@ -1050,30 +1064,31 @@ public class CommandTests {
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         // function $funcName returns first argument
-        String code = generateLuaLibCode(libName, Map.of(funcName, "return args[1]"), false);
+        String code =
+                generateLuaLibCode(libName, Collections.singletonMap(funcName, "return args[1]"), false);
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        var response = regularClient.functionStats().get();
-        for (var nodeResponse : response.values()) {
+        Map<String, Map<String, Map<String, Object>>> response = regularClient.functionStats().get();
+        for (Map<String, Map<String, Object>> nodeResponse : response.values()) {
             checkFunctionStatsResponse(nodeResponse, new String[0], 1, 1);
         }
 
         code =
                 generateLuaLibCode(
                         libName + "_2",
-                        Map.of(funcName + "_2", "return 'OK'", funcName + "_3", "return 42"),
+                        createMap(funcName + "_2", "return 'OK'", funcName + "_3", "return 42"),
                         false);
         assertEquals(libName + "_2", regularClient.functionLoad(code, true).get());
 
         response = regularClient.functionStats().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<String, Map<String, Object>> nodeResponse : response.values()) {
             checkFunctionStatsResponse(nodeResponse, new String[0], 2, 3);
         }
 
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         response = regularClient.functionStats().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<String, Map<String, Object>> nodeResponse : response.values()) {
             checkFunctionStatsResponse(nodeResponse, new String[0], 0, 0);
         }
     }
@@ -1090,18 +1105,20 @@ public class CommandTests {
 
         // function $funcName returns first argument
         GlideString code =
-                generateLuaLibCodeBinary(libName, Map.of(funcName, gs("return args[1]")), false);
+                generateLuaLibCodeBinary(
+                        libName, Collections.singletonMap(funcName, gs("return args[1]")), false);
         assertEquals(libName, regularClient.functionLoad(code, true).get());
 
-        var response = regularClient.functionStatsBinary().get();
-        for (var nodeResponse : response.values()) {
+        Map<String, Map<GlideString, Map<GlideString, Object>>> response =
+                regularClient.functionStatsBinary().get();
+        for (Map<GlideString, Map<GlideString, Object>> nodeResponse : response.values()) {
             checkFunctionStatsBinaryResponse(nodeResponse, new GlideString[0], 1, 1);
         }
 
         code =
                 generateLuaLibCodeBinary(
                         gs(libName.toString() + "_2"),
-                        Map.of(
+                        createMap(
                                 gs(funcName.toString() + "_2"),
                                 gs("return 'OK'"),
                                 gs(funcName.toString() + "_3"),
@@ -1110,14 +1127,14 @@ public class CommandTests {
         assertEquals(gs(libName.toString() + "_2"), regularClient.functionLoad(code, true).get());
 
         response = regularClient.functionStatsBinary().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<GlideString, Map<GlideString, Object>> nodeResponse : response.values()) {
             checkFunctionStatsBinaryResponse(nodeResponse, new GlideString[0], 2, 3);
         }
 
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
 
         response = regularClient.functionStatsBinary().get();
-        for (var nodeResponse : response.values()) {
+        for (Map<GlideString, Map<GlideString, Object>> nodeResponse : response.values()) {
             checkFunctionStatsBinaryResponse(nodeResponse, new GlideString[0], 0, 0);
         }
     }
@@ -1140,14 +1157,14 @@ public class CommandTests {
         // function $name1 returns first argument
         // function $name2 returns argument array len
         String code =
-                generateLuaLibCode(name1, Map.of(name1, "return args[1]", name2, "return #args"), false);
+                generateLuaLibCode(name1, createMap(name1, "return args[1]", name2, "return #args"), false);
         assertEquals(name1, regularClient.functionLoad(code, true).get());
-        var flist = regularClient.functionList(true).get();
+        Map<String, Object>[] flist = regularClient.functionList(true).get();
 
         final byte[] dump = regularClient.functionDump().get();
 
         // restore without cleaning the lib and/or overwrite option causes an error
-        var executionException =
+        ExecutionException executionException =
                 assertThrows(ExecutionException.class, () -> regularClient.functionRestore(dump).get());
         assertInstanceOf(RequestException.class, executionException.getCause());
         assertTrue(executionException.getMessage().contains("Library " + name1 + " already exists"));
@@ -1166,7 +1183,8 @@ public class CommandTests {
 
         // create lib with another name, but with the same function names
         assertEquals(OK, regularClient.functionFlush(SYNC).get());
-        code = generateLuaLibCode(name2, Map.of(name1, "return args[1]", name2, "return #args"), false);
+        code =
+                generateLuaLibCode(name2, createMap(name1, "return args[1]", name2, "return #args"), false);
         assertEquals(name2, regularClient.functionLoad(code, true).get());
 
         // REPLACE policy now fails due to a name collision
@@ -1568,8 +1586,8 @@ public class CommandTests {
     @ParameterizedTest
     @MethodSource("getClients")
     public void script_large_keys_and_or_args(GlideClient regularClient) {
-        String str1 = "0".repeat(1 << 12); // 4k
-        String str2 = "0".repeat(1 << 12); // 4k
+        String str1 = repeat("0", 1 << 12); // 4k
+        String str2 = repeat("0", 1 << 12); // 4k
 
         try (Script script = new Script("return KEYS[1]", false)) {
             // 1 very big key
@@ -1664,7 +1682,7 @@ public class CommandTests {
         // Get the SHA1 digests of the scripts
         String sha1_1 = script1.getHash();
         String sha1_2 = script2.getHash();
-        String nonExistentSha1 = "0".repeat(40); // A SHA1 that doesn't exist
+        String nonExistentSha1 = repeat("0", 40); // A SHA1 that doesn't exist
 
         // Check existence of scripts
         Boolean[] result =
@@ -1688,7 +1706,7 @@ public class CommandTests {
         // Get the SHA1 digests of the scripts
         GlideString sha1_1 = gs(script1.getHash());
         GlideString sha1_2 = gs(script2.getHash());
-        GlideString nonExistentSha1 = gs("0".repeat(40)); // A SHA1 that doesn't exist
+        GlideString nonExistentSha1 = gs(repeat("0", 40)); // A SHA1 that doesn't exist
 
         // Check existence of scripts
         Boolean[] result =
@@ -1744,7 +1762,7 @@ public class CommandTests {
         // create and load a long-running script
         Script script = new Script(createLongRunningLuaScript(6, true), true);
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 testClient.invokeScript(script);
@@ -1850,7 +1868,7 @@ public class CommandTests {
         CompletableFuture<Object> promise = new CompletableFuture<>();
         promise.complete(null);
 
-        try (var testClient =
+        try (GlideClient testClient =
                 GlideClient.createClient(commonClientConfig().requestTimeout(10000).build()).get()) {
             try {
                 // run the script without await
